<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- EditText for the first city -->

        <!-- EditText for the second city -->
        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_first_city"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextCity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_second_city"
            android:inputType="text"
            android:layout_below="@id/editTextCity"
            android:layout_marginBottom="16dp"
            android:autofillHints="" />

        <!-- TextView to display the first city name -->
        <TextView
            android:id="@+id/cityName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/editTextCity2"
            android:layout_marginTop="8dp"/>

        <!-- TextView to display the first city's weather -->
        <TextView
            android:id="@+id/textViewWeather1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:layout_below="@id/cityName1"
            android:layout_marginTop="4dp"/>

        <!-- TextView to display the first city's wind -->
        <TextView
            android:id="@+id/textViewWind1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_below="@id/textViewWeather1"
            android:layout_marginTop="4dp"/>

        <!-- TextView to display the second city name -->
        <TextView
            android:id="@+id/cityName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/textViewWind1"
            android:layout_marginTop="16dp"/>

        <!-- TextView to display the second city's weather -->
        <TextView
            android:id="@+id/textViewWeather2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:layout_below="@id/cityName2"
            android:layout_marginTop="4dp"/>

        <!-- TextView to display the second city's wind -->
        <TextView
            android:id="@+id/textViewWind2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_below="@id/textViewWeather2"
            android:layout_marginTop="4dp"/>

        <!-- Button to refresh weather data -->
        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:layout_below="@id/textViewWind2"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>